infrastructure/security/kyverno/release.yaml
# Kyverno - Policy engine
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
